--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spawn-x-effects",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "effects for spawn-x. (Reactive management for javaScript applications)",
   "author": "AlexPlex",
   "license": "MIT",
@@ -10,7 +10,10 @@
     "build": "npm run build:dev && npm run build:prod",
     "build:dev": "webpack",
     "build:prod": "set WEBPACK_ENV=build:prod&& webpack",
-    "dev": "set WEBPACK_ENV=dev&& webpack --watch"
+    "dev": "set WEBPACK_ENV=dev&& webpack --watch",
+    "test": "tape test/index.js",
+    "precommit": "npm test",
+    "prepush": "npm test"
   },
   "repository": {
     "type": "git",
@@ -46,6 +49,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
     "husky": "^0.13.2",
+    "tape": "^4.6.3",
     "webpack": "2.2.0"
   }
 }
